# TelegramBot

./: .gitignore  Dockerfile.deploy  Dockerfile.test  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
alembic/: env.py
alembic/versions/: 4cfd5b81c22a_create_db.py  6f80082cb638_create_db.py
conf/: bot.yaml  config.py  db.yaml
docker/: Dockerfile.dev  docker_build_dev.sh  run_db_container.sh
src/: main.py
src/db_controller/: db.py  db_setup.py  tables.py
src/service/: markup.py  service.py
