[tool.poetry]
name = "telegrambot"
version = "0.1.0"
description = ""
authors = ["TOFOACK <pkorotaevdm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^23.7.0"
isort = "^5.12.0"
aiogram = "^2.25.1"
Django = "^4.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
